# bare-duckdb

./: .gitignore  CMakeLists.txt  README.md  binding.c  example.js  index.js  package.json
.config/: .depcheckrc
.github/workflows/: prebuild.yml  test.yml
test/: index.test.js
